@@ -1,3 +1,7 @@
+2005-09-24  Derek Price  <derek@ximbiot.com>
+
+	* socket-client.c: General cleanup.
+
 2005-09-23  Larry Jones  <lawrence.jones@ugs.com>
 
 	* checkout.c (export_usage): Note that -r requires a tag.
